--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </section>
 
         <section id="impacto" class="mb-16">
-            <h2 class="text-3xl md:text-4xl font-bold text-center text-gray-900 section-title">¿Por Qué Es Importante Abordar la Delincuencia?</h2>
+            <h2 class="text-3xl md:text-4xl font-bold text-center text-gray-900 section-title">¿Por qué es importante abordar la delincuencia?</h2>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8 mt-8 max-w-6xl mx-auto">
                 <div class="bg-white p-6 rounded-lg shadow-md border border-gray-100">
                     <h3 class="text-xl font-semibold text-gray-900 mb-3">Impacto Económico</h3>
@@ -161,7 +161,7 @@ estabilidad del país a largo plazo.
         </section>
 
         <section id="causas" class="mb-16">
-            <h2 class="text-3xl md:text-4xl font-bold text-center text-gray-900 section-title">¿Qué lo Causa? Factores Clave</h2>
+            <h2 class="text-3xl md:text-4xl font-bold text-center text-gray-900 section-title">¿Qué lo causa? <br> Factores Clave</h2>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8 mt-8 max-w-6xl mx-auto">
                 <div class="bg-white p-6 rounded-lg shadow-md border border-gray-100 flex flex-col items-center text-center">
                     <span class="text-5xl mb-4" role="img" aria-label="Familia rota">💔</span>
@@ -182,7 +182,7 @@ estabilidad del país a largo plazo.
         </section>
 
         <section id="afectados" class="mb-16">
-            <h2 class="text-3xl md:text-4xl font-bold text-center text-gray-900 section-title">¿A Quién Afecta Más?</h2>
+            <h2 class="text-3xl md:text-4xl font-bold text-center text-gray-900 section-title">¿A quién afecta más?</h2>
             <div class="mt-8 bg-purple-50 p-8 rounded-lg shadow-inner max-w-4xl mx-auto text-center">
                 <h3 class="text-2xl font-bold text-purple-800 mb-4">Sectores Vulnerables, Pero Todos Afectados</h3>
                 <p class="text-purple-700 mb-4">
@@ -192,7 +192,7 @@ estabilidad del país a largo plazo.
         </section>
 
         <section id="hecho-hasta-ahora" class="mb-16">
-            <h2 class="text-3xl md:text-4xl font-bold text-center text-gray-900 section-title">¿Qué Se Ha Hecho Hasta Ahora? Políticas y Fracasos</h2>
+            <h2 class="text-3xl md:text-4xl font-bold text-center text-gray-900 section-title">¿Qué se ha hecho hasta ahora? Políticas y Fracasos</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mt-8 max-w-6xl mx-auto">
                 <div class="bg-white p-6 rounded-lg shadow-md border border-gray-100">
                     <h3 class="text-xl font-semibold text-gray-900 mb-2">Estados de Emergencia</h3>
